--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,10 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:onClick="btn"
+        android:clickable="false"
+        android:linksClickable="false"
+        android:longClickable="false"
+        android:onClick="onClick"
         android:text="Begin"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
