--- a/app/src/main/res/layout/activity_operations.xml
+++ b/app/src/main/res/layout/activity_operations.xml
@@ -15,11 +15,12 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="53dp"
         android:layout_marginRight="53dp"
+        android:layout_marginBottom="354dp"
         android:onClick="adding"
         android:tag="+"
         android:text="Addition"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,7 @@
         android:layout_width="304dp"
         android:layout_height="0dp"
         android:layout_marginBottom="203dp"
-        android:onClick="div"
+        android:onClick="adding"
         android:tag="/"
         android:text="Division"
         android:textSize="30sp"
@@ -48,7 +49,7 @@
         android:layout_marginLeft="53dp"
         android:layout_marginEnd="53dp"
         android:layout_marginRight="53dp"
-        android:onClick="sub"
+        android:onClick="adding"
         android:tag="-"
         android:text="Subtraction"
         android:textSize="30sp"
@@ -62,7 +63,7 @@
         android:id="@+id/button4"
         android:layout_width="304dp"
         android:layout_height="0dp"
-        android:onClick="mul"
+        android:onClick="adding"
         android:tag="*"
         android:text="multiplication"
         android:textSize="30sp"
@@ -71,4 +72,18 @@
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="76dp"
+        android:onClick="adding"
+        android:text="Compare"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 </android.support.constraint.ConstraintLayout>
